<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/light_back"
    android:id="@+id/new_advert_layout"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_advert_heading"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/dark_text"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_type_text"
            android:textColor="@color/dark_text"/>
        <RadioGroup
            android:id="@+id/post_type_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:gravity="center">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lost_radio"
                android:text="@string/lost_radio_text"
                android:textColor="@color/dark_text"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/found_radio"
                android:text="@string/found_radio_text"
                android:textColor="@color/dark_text"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>
        </RadioGroup>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/name_label"
        android:textColor="@color/dark_text"
        android:layout_gravity="start"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/name_entry"
        android:hint="@string/enter_name_hint"
        android:autofillHints="name"
        android:inputType="text" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/phone_label"
        android:textColor="@color/dark_text"
        android:layout_gravity="start"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/phone_entry"
        android:inputType="phone"
        android:hint="@string/phone_number_hint"
        android:autofillHints="phone" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/description_label"
        android:textColor="@color/dark_text"
        android:layout_gravity="start"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:maxHeight="300dp"
        android:id="@+id/description_entry"
        android:inputType="textMultiLine"
        android:hint="@string/item_desc_hint"
        android:importantForAutofill="no" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/date_label"
        android:textColor="@color/dark_text"
        android:layout_gravity="start"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/date_entry"
        android:inputType="date"
        android:hint="@string/enter_date_hint"
        android:focusable="false"
        android:importantForAutofill="no" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/location_label"
        android:textColor="@color/dark_text"
        android:layout_gravity="start"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/location_entry"
        android:hint="@string/enter_location_hint"
        android:importantForAutofill="no"
        android:inputType="text" />
    <Button
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_save_advert"
        android:textColor="@color/light_text"
        android:backgroundTint="@color/dark_accent"
        android:text="@string/save_btn_text"/>

</LinearLayout>